# TOVAL_audio

./: .gitignore  CMakeLists.txt
Cmake/: arduino.cmake  default_toolchain.cmake
audioDSP/inc/: CMakeLists.txt
audioDSP/inc/TOVALEffect/: TOVAL_Effect.h  TOVAL_Effect_p.h
audioDSP/inc/modules/: Headroom.h
audioDSP/inc/primatives/: adaptive_Biquad.h
audioDSP/inc/utils/: TOVALaudio.h  conversionFN.h
audioDSP/src/: CMakeLists.txt
audioDSP/src/TOVALEffect/: TOVAL_Effect.cpp
audioDSP/src/modules/: Headroom.cpp
audioDSP/src/primatives/: adaptive_Biquad.cpp
scripts/: build.sh  test-effect.sh  test-module.sh
scripts/unit Tests/: adaptiveEQ_TestPlot.py
scripts/unit Tests/adaptiveEQ_animation/: method1.py  method2.py  method3.py
test/inc/: CMakeLists.txt  JsonParams.h  Tonal_Valley_test.h  module_tests.h
test/src/: CMakeLists.txt  JsonParams.cpp  Tonal_Valley_test.cpp  module_tests.cpp
test/test_cases/01_bypass/: params.json
test/test_cases/02_default/: params.json
test/test_cases/03_-20dB_Headroom/: params.json
test/test_cases/04_-10dB/: params.json
test/test_cases/05_-20dB_globalBypass/: params.json
test/test_cases/06_-20dB_localBypass/: params.json
test/test_cases/07_0dB/: params.json
